Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0
-
None
-
-
4dc3fb05a (13.0), 80fa7ca45 (13.0), c87435f97 (13.0), f35962cfb (13.0)
Description
All spitters in Qt Creator:
- between editor window and output pane (horizotal splitter)
- between editor and left sidebar and editor and right sidebar (vertitcal splitter)
Are like 1 pixel wide and don't have feedback in the sense that the mouse cursor changes. Can take minutes to find them, lots of RSI, this way they are completely useless.
I've found the splitters always a bit hard to find in QTCreator, but since 12.0.0 update it became much worse and mouse cursor feedback stopped working.
Attachments
Issue Links
- resulted in
-
QTBUG-119875 [Reg: 6.4 > 6.5] On some non-KDE systems, the mouse cursor doesn't change to indicate resize interaction
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-29980 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524431,2 | Core: Explicitly set cursor on the minisplitter handle | 12.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
524682,5 | Core: Explicitly provide image for minisplitter cursors | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
536784,3 | Doc: Describe overriding system cursor for resizing editor views | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
544279,3 | Core: Tweak cursor handling of mini splitter | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
544280,3 | Core: Fix handling of high dpi for self provided cursors | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |