Core: Tweak cursor handling of mini splitter

It is possible that the internal signals are missed which
results in a stale cursor until it gets changed again.
Explicitly handle the hover event and set the cursor there.

This also makes the need to restart QC obsolete when toggling
the respective option.

Task-number: QTCREATORBUG-29980
Change-Id: I51dfa6fda018a325d43cddae99f395cd8c0accde
Reviewed-by: Eike Ziller <eike.ziller@qt.io>